--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     </form>
     <div id="results"></div>
     <script src="script.js"></script>
+    <footer>
+        <p class="copyright">
+            &copy; 2023 Rian Uchôa | All Rights Reserved
+        </p>
+    </footer>
 
     
 </body>
